<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_maps"
        android:orderInCategory="100"
        android:title="Maps"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="Logout"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="never"
        />
</menu>